--- a/kali/edit_profile.html
+++ b/kali/edit_profile.html
@@ -3,48 +3,150 @@
 <head>
 <META HTTP-EQUIV="Content-Type" CONTENT="text/html; charset=ISO-8859-1">
 <title>TitoTrainer - Edit Your Profile</title>
+<script language="Javascript">
+
+	/* Function to check the validity of form inputs that can be checked client-side - called on submit event. */
+	function checkForm() {
+		var form = document.edit_profile_form;
+		var returnvalue = true;
+
+		// remove old error messages
+		document.getElementById("first_name_error_msg_space").innerHTML = '';
+		document.getElementById("last_name_error_msg_space").innerHTML = '';
+		document.getElementById("student_number_error_msg_space").innerHTML = '';
+		document.getElementById("ssn_error_msg_space").innerHTML = '';
+		document.getElementById("email_error_msg_space").innerHTML = '';
+		document.getElementById("old_password_error_msg_space").innerHTML = '';
+		document.getElementById("new_password_error_msg_space").innerHTML = '';
+		document.getElementById("repeat_new_password_error_msg_space").innerHTML = '';
+
+		// missing inputs
+		if(form.first_name.value == '') {
+			var elem = document.getElementById("first_name_error_msg_space");
+			elem.innerHTML = '<font color="#FF0000"><b>Please fill in your first name.</b></font>';
+			returnvalue = false;
+		}
+
+		if(form.last_name.value == '') {
+			var elem = document.getElementById("last_name_error_msg_space");
+			elem.innerHTML = '<font color="#FF0000"><b>Please fill in your last name.</b></font>';
+			returnvalue = false;
+		}
+
+		if(form.student_number.value == '' && form.social_security_number.value == '') {
+			var elem = document.getElementById("student_number_error_msg_space");
+			elem.innerHTML = '<font color="#FF0000"><b>Please fill in either your student number or social security number.</b></font>';
+			returnvalue = false;
+		}
+
+		if(form.email.value == '') {
+			var elem = document.getElementById("email_error_msg_space");
+			elem.innerHTML = '<font color="#FF0000"><b>Please fill in your e-mail address.</b></font>';
+			returnvalue = false;
+		}
+
+		// old password given, but no new one chosen
+		if((form.old_password.value != '') && (form.new_password.value == '')) {
+			var elem = document.getElementById("new_password_error_msg_space");
+			elem.innerHTML = '<font color="#FF0000"><b>Please choose a new password.</b></font>';
+			returnvalue = false;
+		}
+
+		// new password chosen, but not repeated
+		if((form.new_password.value != '') && (form.repeat_new_password.value == '')) {
+			var elem = document.getElementById("repeat_new_password_error_msg_space");
+			elem.innerHTML = '<font color="#FF0000"><b>Please repeat your new password.</b></font>';
+			returnvalue = false;
+		}
+
+		// new password chosen, but old one not given
+		if((form.new_password.value != '') && (form.old_password.value == '')) {
+			var elem = document.getElementById("old_password_error_msg_space");
+			elem.innerHTML = '<font color="#FF0000"><b>Please fill in your old password.</b></font>';
+			returnvalue = false;
+		}
+
+		// student number of wrong format
+		if((form.student_number.value != '') && (form.student_number.value.length != 9 || !stringContainsOnlyNumbers(form.student_number.value))) {
+			var elem = document.getElementById("student_number_error_msg_space");
+			elem.innerHTML = '<font color="#FF0000"><b>Your student number is either of wrong length or contains non-numeric characters.</b></font>';
+			returnvalue = false;
+		}
+
+
+		// "new password" and "repeat new password" don't match and neither is empty
+		if((form.new_password.value != '') && (form.repeat_new_password.value != '') && (form.new_password.value != form.repeat_new_password.value)) {
+			var elem = document.getElementById("new_password_error_msg_space");
+			elem.innerHTML = '<font color="#FF0000"><b>Different values in new password fields. Please check your typing.</b></font>';			
+			returnvalue = false;
+		}
+
+		return returnvalue;
+	}
+
+	/* Function to check if the string given as a parameter contains only numeric characters. */
+	function stringContainsOnlyNumbers(aString) {
+
+		for (var charCounter = 0; charCounter < aString.length; charCounter++) {
+			if(isNaN(aString.charAt(charCounter)) || aString.charAt(charCounter) == ' '.charAt(0)) {	// JS interprets white space as numeric
+				return false;
+			}
+		}
+
+		return true;
+	}
+
+</script>
 </head>
 
 <body>
 
 <h2>Edit Your Profile</h2>
 
-<form action="">
+<form name="edit_profile_form" action="" onsubmit="return checkForm()">
 
 <div>
 	<table border="0" cellpadding="5">
 		<tr>
 			<td><b>User name </b></td>
 			<td>[user name]</td>
+			<td>&nbsp;</td>
 		</tr>
 		<tr>
 			<td><b>First name </b></td>
 			<td><input type="text" name="first_name"></td>
+			<td id="first_name_error_msg_space">&nbsp;</td>
 		</tr>
 		<tr>
 			<td><b>Last name </b></td>
 			<td><input type="text" name="last_name"></td>
+			<td id="last_name_error_msg_space">&nbsp;</td>
 		</tr>
 		<tr>
-			<td><b>Student number* </b></td>
+			<td><b>Student number<sup>1</sup> </b></td>
 			<td><input type="text" name="student_number"></td>
+			<td id="student_number_error_msg_space">&nbsp;</td>
 		</tr>
 		<tr>
-			<td><b>Social security number* </b></td>
+			<td><b>Social security number<sup>1</sup> </b></td>
 			<td><input type="text" name="social_security_number"></td>
+			<td id="ssn_error_msg_space">&nbsp;</td>
 		</tr>
 		<tr>
-			<td colspan="2"><small>* either student number or social security number is required</small></td>
+			<td colspan="2"><small><sup>1</sup> either student number or social security number is required</small></td>
 		</tr>
 		<tr>
 			<td colspan="2"><hr></td>
+			<td>&nbsp;</td>
 		</tr>
 		<tr>
 			<td><b>E-mail: </b></td>
 			<td><input type="text" name="email"></td>
+			<td id="email_error_msg_space">&nbsp;</td>
 		</tr>
 		<tr>
 			<td colspan="2"><hr></td>
+			<td>&nbsp;</td>
 		</tr>
 		<tr>
 			<td colspan="2"><b><i>Change password</i></b></td>
@@ -52,17 +154,21 @@
 		<tr>
 			<td><b>Old password </b></td>
 			<td><input type="password" name="old_password"></td>
+			<td id="old_password_error_msg_space">&nbsp;</td>
 		</tr>
 		<tr>
 			<td><b>New password </b></td>
 			<td><input type="password" name="new_password"></td>
+			<td id="new_password_error_msg_space">&nbsp;</td>
 		</tr>
 		<tr>
 			<td><b>New password again </b></td>
 			<td><input type="password" name="repeat_new_password"></td>
+			<td id="repeat_new_password_error_msg_space">&nbsp;</td>
 		</tr>
 		<tr>
 			<td colspan="2" align="right"><input type="submit" name="save_button" value="Save"></td>
+			<td>&nbsp;</td>
 		</tr>
 	</table>
 </div>
