--- a/kali/edit_profile.html
+++ b/kali/edit_profile.html
@@ -3,12 +3,16 @@
 <head>
 <META HTTP-EQUIV="Content-Type" CONTENT="text/html; charset=ISO-8859-1">
 <title>TitoTrainer - Edit Your Profile</title>
+<!-- // TODO
+Server-side: If new password field isn't empty, check that the old password matches.
+-->
 <script language="Javascript">
 
 	/* Function to check the validity of form inputs that can be checked client-side - called on submit event. */
 	function checkForm() {
 		var form = document.edit_profile_form;
 		var returnvalue = true;
+		var emailExp = /([a-zA-Z0-9_\.\-])+\@(([a-zA-Z0-9\-])+\.)+([a-zA-Z0-9]{2,4})$/;	// name followed by @ followed by domain
 
 		// remove old error messages
 		document.getElementById("first_name_error_msg_space").innerHTML = '';
@@ -73,6 +77,12 @@
 			returnvalue = false;
 		}
 
+		// e-mail address of wrong format
+		if((form.email.value != '') && (!emailExp.test(form.email.value))) {
+			var elem = document.getElementById("email_error_msg_space");
+			elem.innerHTML = '<font color="#FF0000"><b>Your e-mail address isn\'t of a valid format. A valid format would be e.g. user@cs.helsinki.fi</b></font>';
+			returnvalue = false;
+		}
 
 		// "new password" and "repeat new password" don't match and neither is empty
 		if((form.new_password.value != '') && (form.repeat_new_password.value != '') && (form.new_password.value != form.repeat_new_password.value)) {
